      [James Paige]
    * Bug 625: 'Damage instead of set' % based attacks now respect
      the cure and harmed by cure bitsets [Yuriy, Ralph]
    * More missing/wrong menu sound effects
    * Battle Music: silence now works again
    * set formation song now actually works [Ralph]
    * Bug 586: Textbox backdrop can become the tileset with showtextbox
      without advancetextbox
    * Bug 432: "Use door" sometimes goes through the door you are
      standing on instead of the intended one [Ralph]

  * New Plotscripting Stuff
    * You can now have up to 4096 global variables (global ID numbers
      0-4095) [James Paige]
    * loadtileset, gettileanimationoffset, settileanimationoffset,
      animationstarttile, currentdisplaytile now take layer arguments.
      "change tileset" and "layer tileset" also added for layer tilesets
    * Changed get formation song and set formation song have to not use
      a +1 offset for songs, and can handle "same as map" song. This
      only affects recompiled scripts [Ralph]
    * add enemy to formation, delete enemy from formation,
      find enemy in formation, formation slot enemy, formation slot x,
      formation slot y, get formation background, set formation background,
      last formation, formation set frequency, formation probability,
      random formation [Ralph]
    * current text box

  * Stuff only Developers Will Notice

  * Vikings of Midgard

Jan 21 2008 [voxhumana]

  * New Features
    * Attack bitset 'Do not chain if attack fails' [Mike Caron]
    * Equip screen displays the number by which a stat will change [James]
    * -s pixel smoothing now works with all bit depths, not just 8-bit
      [Reaxor Jones]
    * Attack bitsets to disable specific target slots now work for enemies
      also [James Paige]
    * Attacks can have preferred default targets based on factors such as
      distance or strongest stat or weakest stat [James Paige]
    * Customizable main menus. [James Paige]